<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_cost_editTextLayout"
        app:layout_constraintBottom_toBottomOf="@id/service_cost_editTextLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/service_cost_editTextLayout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/service_cost_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_service"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_text"
        app:layout_constraintBottom_toBottomOf="@id/service_text"/>

    <TextView
        android:id="@+id/service_text"
        style="@style/Widget.TipCalc.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serviceQuestion"
        app:layout_constraintTop_toBottomOf="@id/service_cost_editTextLayout"
        app:layout_constraintStart_toEndOf="@id/ic_service"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/amazing_btn"
        app:layout_constraintStart_toStartOf="@id/service_text"
        app:layout_constraintTop_toBottomOf="@id/service_text">
        <RadioButton
            android:id="@+id/amazing_btn"
            style="@style/Widget.TipCalc.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"/>

        <RadioButton
            android:id="@+id/good_btn"
            style="@style/Widget.TipCalc.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/ok_btn"
            style="@style/Widget.TipCalc.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3"/>

    </RadioGroup>

    <ImageView
        android:id="@+id/ic_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_round_up"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/roundUp_tip"
        app:layout_constraintBottom_toBottomOf="@id/roundUp_tip"/>
    
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/roundUp_tip"
        style="@style/Widget.TipCalc.CompoundButton.Switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        app:layout_constraintStart_toEndOf="@id/ic_round_up"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/round_up_tip"
        android:checked="true"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/roundUp_tip"
        app:layout_constraintTop_toBottomOf="@id/roundUp_tip" />

    <TextView
        android:id="@+id/tip_resultText"
        style="@style/Widget.TipCalc.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/calculate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/result"
        tools:text="Tip Amount: $10"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>